{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 19,
  "lineage": "52461158-84d4-9f88-96e5-4220b0a217c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122245390573:internet-gateway/igw-0dce8fd5f92698513",
            "id": "igw-0dce8fd5f92698513",
            "owner_id": "122245390573",
            "region": "us-east-1",
            "vpc_id": "vpc-0e3a2f52e6819f019"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122245390573:loadbalancer/app/nginx-lb/ac9bdf8670b309ec",
            "arn_suffix": "app/nginx-lb/ac9bdf8670b309ec",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-lb-1181025446.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:122245390573:loadbalancer/app/nginx-lb/ac9bdf8670b309ec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-lb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-07018bb8779358dc6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01bf68a8e8c1c410a"
              },
              {
                "subnet_id": "subnet-0587a50b69c0cd3e8"
              }
            ],
            "subnets": [
              "subnet-01bf68a8e8c1c410a",
              "subnet-0587a50b69c0cd3e8"
            ],
            "vpc_id": "vpc-0e3a2f52e6819f019",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122245390573:loadbalancer/app/nginx-lb/ac9bdf8670b309ec"
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "aws_subnet.public",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122245390573:listener/app/nginx-lb/ac9bdf8670b309ec/55fc0450c7561d39",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:122245390573:targetgroup/nginx-tg/c8423d22a61fdd37",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:122245390573:listener/app/nginx-lb/ac9bdf8670b309ec/55fc0450c7561d39",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:122245390573:loadbalancer/app/nginx-lb/ac9bdf8670b309ec",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122245390573:listener/app/nginx-lb/ac9bdf8670b309ec/55fc0450c7561d39"
          },
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.nginx_sg",
            "aws_subnet.public",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122245390573:targetgroup/nginx-tg/c8423d22a61fdd37",
            "arn_suffix": "targetgroup/nginx-tg/c8423d22a61fdd37",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:122245390573:targetgroup/nginx-tg/c8423d22a61fdd37",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e3a2f52e6819f019"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:122245390573:targetgroup/nginx-tg/c8423d22a61fdd37"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122245390573:route-table/rtb-0dfac79b49dc03142",
            "id": "rtb-0dfac79b49dc03142",
            "owner_id": "122245390573",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dce8fd5f92698513",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e3a2f52e6819f019"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122245390573",
            "id": "rtb-0dfac79b49dc03142",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bb92c9244126102",
            "region": "us-east-1",
            "route_table_id": "rtb-0dfac79b49dc03142",
            "subnet_id": "subnet-0587a50b69c0cd3e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0766bd6a11d4059eb",
            "region": "us-east-1",
            "route_table_id": "rtb-0dfac79b49dc03142",
            "subnet_id": "subnet-01bf68a8e8c1c410a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122245390573:security-group/sg-07018bb8779358dc6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07018bb8779358dc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg-20260129115619380900000001",
            "name_prefix": "nginx-sg-",
            "owner_id": "122245390573",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e3a2f52e6819f019"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122245390573",
            "id": "sg-07018bb8779358dc6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122245390573:subnet/subnet-0587a50b69c0cd3e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0587a50b69c0cd3e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122245390573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-nginx-public-subnet-0"
            },
            "tags_all": {
              "Name": "ecs-nginx-public-subnet-0"
            },
            "vpc_id": "vpc-0e3a2f52e6819f019"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122245390573",
            "id": "subnet-0587a50b69c0cd3e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122245390573:subnet/subnet-01bf68a8e8c1c410a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bf68a8e8c1c410a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122245390573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-nginx-public-subnet-1"
            },
            "tags_all": {
              "Name": "ecs-nginx-public-subnet-1"
            },
            "vpc_id": "vpc-0e3a2f52e6819f019"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122245390573",
            "id": "subnet-01bf68a8e8c1c410a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122245390573:vpc/vpc-0e3a2f52e6819f019",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4b219263bb3ff82",
            "default_route_table_id": "rtb-087bb489afab4bb53",
            "default_security_group_id": "sg-01bcf4f375b6af4b5",
            "dhcp_options_id": "dopt-06a704cd74ed18ef0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3a2f52e6819f019",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087bb489afab4bb53",
            "owner_id": "122245390573",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-nginx-vpc"
            },
            "tags_all": {
              "Name": "ecs-nginx-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "122245390573",
            "id": "vpc-0e3a2f52e6819f019",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}